# dotman

./: Cargo.toml  README.md  hub.yml
.github/workflows/: release.yml
src/: main.rs
