[package]
name = "dotman"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dirs = "5"
which = "6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
url = "2.5"
comfy-table = "7"
