[package]
name = "dothub"
version = "0.1.1"
edition = "2021"
description = "Minimal dotfile manager with a curated hub browser and fast linking"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/yourname/dothub"
keywords = ["dotfiles", "cli", "xdg", "neovim", "tmux"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dirs = "5"
which = "6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
url = "2.5"
comfy-table = "7"
